# solad

./: README.md
cli/solad-ts-sdk/: .gitignore  package-lock.json  package.json
cli/solad-ts-sdk/src/: client.ts  types.ts
cli/solad-ts-sdk/src/client/: Core.ts  Service.ts
cli/solad-ts-sdk/src/utils/: pda-helper.ts  state-helper.ts
contract/: .gitignore  Anchor.toml  package.json
contract/docs/: economics.md  spec.md
contract/idl/: contract.json
contract/programs/contract/: Cargo.toml
contract/programs/contract/src/: errors.rs  events.rs  lib.rs  states.rs  utils.rs
contract/programs/contract/src/instructions/: batch_request_replacement.rs  claim_rewards.rs  close_upload.rs  deregister_node.rs  initialize.rs  mod.rs  register_node.rs  request_replacement.rs  slash_timeout.rs  slash_user.rs  submit_pos.rs  update_config.rs  upload_data.rs
contract/tests/: contract.ts
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/src/: App.jsx  WalletConnect.jsx  idl.json  setup.js
frontend/src/Components/: FileUploader.jsx  HashQuery.jsx  StorageStats.jsx
node/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  fly.toml
node/data/logs/: node.log.txt
node/data/mydb/: IDENTITY  LOG
node/mydb/: 000028.sst  000031.sst  000036.sst  IDENTITY  LOG  LOG.old.1745054730030840  LOG.old.1745166306878409  LOG.old.1745397730853971  LOG.old.1745398050141404  LOG.old.1745398282388237  LOG.old.1746044808677657  LOG.old.1746044837483568  LOG.old.1746270886746593  LOG.old.1746270957690310  LOG.old.1746270999420200  MANIFEST-000042  MANIFEST-000054
node/src/: anchor.rs  data_store.rs  data_upload_event.rs  db.rs  error.rs  handlers.rs  libp2p.rs  main.rs  models.rs  network_manager.rs  solad_client.rs  solana_event.rs  utils.rs
sdk/: Cargo.toml
sdk-rs/: Cargo.toml  README.md
sdk-rs/src/: error.rs  event.rs  lib.rs  model.rs
sdk-ts/: .gitignore
sdk-ts/src/: client.ts  types.ts
sdk-ts/src/client/: Core.ts  Service.ts
sdk/src/: error.rs  event.rs  lib.rs
