[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["serde", "v4"] }
rocksdb = "0.21.0"
thiserror = "1.0"       # For clean error handling
futures = "0.3" 
validator = { version = "0.16", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
solana-client = "1.18.26"
solana-sdk = "1.18.26"
solana-program = "1.18.26"
anchor-lang = { version = "0.26", features = ["derive"] }
dashmap = "6.1.0"
contract = { git = "https://github.com/cenwadike/solad" }
anyhow = "1.0.98"
crossbeam-channel = "0.5.15"
base64 = "0.22.1"
bincode = "1.3.3"
libp2p = { version = "0.49.0", features = ["gossipsub", "noise", "tcp", "yamux", "kad", "request-response"] }
async-std = { version = "1.13.1", features = ["attributes"] }
rand = "0.9.1"
ip_network = "0.4.1"
libp2p-tcp = { version = "0.37.0", features = ["tokio", "async-io"] }
anchor-client = { version = "0.30.1", features = ["async"] }
borsh = "1.5.5"
