[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
serde_json = "1.0.85"
solana-sdk = ">=1.18"
solana-client = ">=1.18"
dashmap = "5"
