[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
serde_json = "1.0.85"
solana-client = "1.18.26"
solana-sdk = "1.18.26"
solana-program = "1.18.26"
dashmap = "5"
crossbeam-channel = "0.5.15"
log = "0.4.27"
base64 = "0.22.1"
bincode = "1.3.3"
anchor-client = { version = "0.30.1", features = ["async"] }
anchor-lang = { version = "0.26", features = ["derive"] }
sha2 = "0.10"
anyhow = "1.0.98"
contract = { git = "https://github.com/cenwadike/solad" }
